--- a/archives/toutiao-search/2024-04-13.md
+++ b/archives/toutiao-search/2024-04-13.md
@@ -1,53 +1,70 @@
 # 2024-04-13
 
-共 146 条
+共 162 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Apr 13 2024 10:00:36 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sat Apr 13 2024 11:00:48 GMT+0800 (China Standard Time) -->
 1. [伊朗与以色列互放狠话](https://so.toutiao.com/search?keyword=伊朗与以色列互放狠话)
 1. [金价狂飙下的众生相](https://so.toutiao.com/search?keyword=金价狂飙下的众生相)
 1. [“秦朗丢作业”系摆拍 博主被处罚](https://so.toutiao.com/search?keyword=“秦朗丢作业”系摆拍+博主被处罚)
-1. [拜登警告伊朗不要袭击以色列](https://so.toutiao.com/search?keyword=拜登警告伊朗不要袭击以色列)
-1. [中柬警方联合打击赌诈](https://so.toutiao.com/search?keyword=中柬警方联合打击赌诈)
-1. [居民换表后重庆燃气利润暴增824%](https://so.toutiao.com/search?keyword=居民换表后重庆燃气利润暴增824%)
-1. [南京一高中9人被世界顶尖大学录取](https://so.toutiao.com/search?keyword=南京一高中9人被世界顶尖大学录取)
-1. [菲律宾两大家族被指“因中国决裂”](https://so.toutiao.com/search?keyword=菲律宾两大家族被指“因中国决裂”)
 1. [至少50枚火箭弹从黎巴嫩射向以色列](https://so.toutiao.com/search?keyword=至少50枚火箭弹从黎巴嫩射向以色列)
-1. [乌士兵遭俄无人机连环追击选择自尽](https://so.toutiao.com/search?keyword=乌士兵遭俄无人机连环追击选择自尽)
-1. [警方辟谣成都一小区有人上吊自杀](https://so.toutiao.com/search?keyword=警方辟谣成都一小区有人上吊自杀)
-1. [高校运动会“女友陪跑”名场面](https://so.toutiao.com/search?keyword=高校运动会“女友陪跑”名场面)
-1. [杜特尔特：若中菲紧张定是美国挑唆](https://so.toutiao.com/search?keyword=杜特尔特：若中菲紧张定是美国挑唆)
-1. [开封王婆要去江西说媒了](https://so.toutiao.com/search?keyword=开封王婆要去江西说媒了)
-1. [越南女首富900亿诈骗案细节披露](https://so.toutiao.com/search?keyword=越南女首富900亿诈骗案细节披露)
-1. [男子电梯殴打女子被保安暴揍](https://so.toutiao.com/search?keyword=男子电梯殴打女子被保安暴揍)
+1. [居民换表后重庆燃气利润暴增824%](https://so.toutiao.com/search?keyword=居民换表后重庆燃气利润暴增824%)
+1. [菲律宾两大家族被指“因中国决裂”](https://so.toutiao.com/search?keyword=菲律宾两大家族被指“因中国决裂”)
+1. [拜登警告伊朗不要袭击以色列](https://so.toutiao.com/search?keyword=拜登警告伊朗不要袭击以色列)
 1. [JK罗琳说不会原谅哈利波特主演](https://so.toutiao.com/search?keyword=JK罗琳说不会原谅哈利波特主演)
-1. [校方回应家长请愿让多动症男孩转学](https://so.toutiao.com/search?keyword=校方回应家长请愿让多动症男孩转学)
-1. [男子酒后殴打女友被刑拘](https://so.toutiao.com/search?keyword=男子酒后殴打女友被刑拘)
+1. [骑超标电动车被查 男子当众砸车](https://so.toutiao.com/search?keyword=骑超标电动车被查+男子当众砸车)
+1. [高校运动会“女友陪跑”名场面](https://so.toutiao.com/search?keyword=高校运动会“女友陪跑”名场面)
+1. [警方辟谣成都一小区有人上吊自杀](https://so.toutiao.com/search?keyword=警方辟谣成都一小区有人上吊自杀)
+1. [网红杨立新遇害前曾承认婚内出轨怀孕](https://so.toutiao.com/search?keyword=网红杨立新遇害前曾承认婚内出轨怀孕)
+1. [《承欢记》站内热度破28000](https://so.toutiao.com/search?keyword=《承欢记》站内热度破28000)
+1. [南京一高中9人被世界顶尖大学录取](https://so.toutiao.com/search?keyword=南京一高中9人被世界顶尖大学录取)
+1. [乌士兵遭俄无人机连环追击选择自尽](https://so.toutiao.com/search?keyword=乌士兵遭俄无人机连环追击选择自尽)
+1. [男子电梯殴打女友被保安暴揍](https://so.toutiao.com/search?keyword=男子电梯殴打女友被保安暴揍)
 1. [五一之后今年还有2次调休长假](https://so.toutiao.com/search?keyword=五一之后今年还有2次调休长假)
+1. [越南女首富900亿诈骗案细节披露](https://so.toutiao.com/search?keyword=越南女首富900亿诈骗案细节披露)
+1. [开封王婆要去江西说媒了](https://so.toutiao.com/search?keyword=开封王婆要去江西说媒了)
+1. [男生打一套九节鞭获满分后激情呐喊](https://so.toutiao.com/search?keyword=男生打一套九节鞭获满分后激情呐喊)
 1. [警方通报网红杨立新被害：嫌犯被刑拘](https://so.toutiao.com/search?keyword=警方通报网红杨立新被害：嫌犯被刑拘)
 1. [网红猫一杯就编造捡作业事件道歉](https://so.toutiao.com/search?keyword=网红猫一杯就编造捡作业事件道歉)
-1. [知名大牌暇步士卖出白菜价](https://so.toutiao.com/search?keyword=知名大牌暇步士卖出白菜价)
+1. [台名嘴：马英九访陆哽咽是真情流露](https://so.toutiao.com/search?keyword=台名嘴：马英九访陆哽咽是真情流露)
 1. [杨立新好友：遇害前她还在吃堕胎药](https://so.toutiao.com/search?keyword=杨立新好友：遇害前她还在吃堕胎药)
-1. [专家揭秘黄金飙涨奥秘](https://so.toutiao.com/search?keyword=专家揭秘黄金飙涨奥秘)
 1. [潘石屹：做事情要提前预判](https://so.toutiao.com/search?keyword=潘石屹：做事情要提前预判)
-1. [伊朗媒体：要把以色列特拉维夫夷为平地](https://so.toutiao.com/search?keyword=伊朗媒体：要把以色列特拉维夫夷为平地)
-1. [新党副主席：日若介入台海将迎灾难](https://so.toutiao.com/search?keyword=新党副主席：日若介入台海将迎灾难)
-1. [小米汽车真实锁单量是多少](https://so.toutiao.com/search?keyword=小米汽车真实锁单量是多少)
+1. [“房闹”又来了](https://so.toutiao.com/search?keyword=“房闹”又来了)
+1. [俄罗斯成功试射洲际弹道导弹](https://so.toutiao.com/search?keyword=俄罗斯成功试射洲际弹道导弹)
+1. [杜特尔特：若中菲紧张定是美国挑唆](https://so.toutiao.com/search?keyword=杜特尔特：若中菲紧张定是美国挑唆)
+1. [知名大牌暇步士卖出白菜价](https://so.toutiao.com/search?keyword=知名大牌暇步士卖出白菜价)
 1. [第三个“国九条”会开启A股牛市吗](https://so.toutiao.com/search?keyword=第三个“国九条”会开启A股牛市吗)
+1. [伊朗媒体：要把以色列特拉维夫夷为平地](https://so.toutiao.com/search?keyword=伊朗媒体：要把以色列特拉维夫夷为平地)
+1. [小米汽车真实锁单量是多少](https://so.toutiao.com/search?keyword=小米汽车真实锁单量是多少)
+1. [大爷晨练发现坟里睡了个人 竟是逃犯](https://so.toutiao.com/search?keyword=大爷晨练发现坟里睡了个人+竟是逃犯)
+1. [俄公布“绝密导弹”试射画面](https://so.toutiao.com/search?keyword=俄公布“绝密导弹”试射画面)
+1. [专家揭秘黄金飙涨奥秘](https://so.toutiao.com/search?keyword=专家揭秘黄金飙涨奥秘)
+1. [郭敬明开新店人均消费1500元](https://so.toutiao.com/search?keyword=郭敬明开新店人均消费1500元)
+1. [傅聪候任中国常驻联合国代表](https://so.toutiao.com/search?keyword=傅聪候任中国常驻联合国代表)
+1. [粉丝称买了邓紫棋演唱会门票进不去](https://so.toutiao.com/search?keyword=粉丝称买了邓紫棋演唱会门票进不去)
+1. [中央气象台五预警齐发](https://so.toutiao.com/search?keyword=中央气象台五预警齐发)
+1. [被中方制裁的2家美军火公司啥来头](https://so.toutiao.com/search?keyword=被中方制裁的2家美军火公司啥来头)
+1. [岸田：今日的乌克兰或就是明日的东亚](https://so.toutiao.com/search?keyword=岸田：今日的乌克兰或就是明日的东亚)
+1. [新党副主席：日若介入台海将迎灾难](https://so.toutiao.com/search?keyword=新党副主席：日若介入台海将迎灾难)
+1. [校方回应家长请愿让多动症男孩转学](https://so.toutiao.com/search?keyword=校方回应家长请愿让多动症男孩转学)
+1. [蓝营批赖清德行政团队“独老南”](https://so.toutiao.com/search?keyword=蓝营批赖清德行政团队“独老南”)
+1. [学生修坏学校卫生间隔板被索赔](https://so.toutiao.com/search?keyword=学生修坏学校卫生间隔板被索赔)
+1. [从“提灯定损”看年轻人租房之困](https://so.toutiao.com/search?keyword=从“提灯定损”看年轻人租房之困)
+1. [专家：不能去主动发掘秦始皇帝陵](https://so.toutiao.com/search?keyword=专家：不能去主动发掘秦始皇帝陵)
+1. [海军版长城炮转场](https://so.toutiao.com/search?keyword=海军版长城炮转场)
+1. [杨紫回应剧集品质有保障](https://so.toutiao.com/search?keyword=杨紫回应剧集品质有保障)
+1. [南京北站造型被吐槽像卫生巾](https://so.toutiao.com/search?keyword=南京北站造型被吐槽像卫生巾)
+1. [中柬警方联合打击赌诈](https://so.toutiao.com/search?keyword=中柬警方联合打击赌诈)
+1. [男子电梯殴打女子被保安暴揍](https://so.toutiao.com/search?keyword=男子电梯殴打女子被保安暴揍)
+1. [男子酒后殴打女友被刑拘](https://so.toutiao.com/search?keyword=男子酒后殴打女友被刑拘)
 1. [外卖小哥按顾客要求放餐却被给差评](https://so.toutiao.com/search?keyword=外卖小哥按顾客要求放餐却被给差评)
 1. [胡锡进谈伊朗和以色列会否全面开战](https://so.toutiao.com/search?keyword=胡锡进谈伊朗和以色列会否全面开战)
 1. [骗薪人3年入职197家公司月薪20万](https://so.toutiao.com/search?keyword=骗薪人3年入职197家公司月薪20万)
-1. [“房闹”又来了](https://so.toutiao.com/search?keyword=“房闹”又来了)
-1. [专家：不能去主动发掘秦始皇帝陵](https://so.toutiao.com/search?keyword=专家：不能去主动发掘秦始皇帝陵)
-1. [中央气象台五预警齐发](https://so.toutiao.com/search?keyword=中央气象台五预警齐发)
 1. [朋友称杨立新系被徒弟杀害](https://so.toutiao.com/search?keyword=朋友称杨立新系被徒弟杀害)
 1. [美以军方就伊朗可能的袭击进行评估](https://so.toutiao.com/search?keyword=美以军方就伊朗可能的袭击进行评估)
-1. [被中方制裁的2家美军火公司啥来头](https://so.toutiao.com/search?keyword=被中方制裁的2家美军火公司啥来头)
 1. [被曝出轨的街道办副主任已被停职](https://so.toutiao.com/search?keyword=被曝出轨的街道办副主任已被停职)
-1. [岸田：今日的乌克兰或就是明日的东亚](https://so.toutiao.com/search?keyword=岸田：今日的乌克兰或就是明日的东亚)
 1. [公职人员打老板 官方复读机式回应](https://so.toutiao.com/search?keyword=公职人员打老板+官方复读机式回应)
 1. [越南女首富死刑背后的“烈火熔炉”](https://so.toutiao.com/search?keyword=越南女首富死刑背后的“烈火熔炉”)
-1. [学生修坏学校卫生间隔板被索赔](https://so.toutiao.com/search?keyword=学生修坏学校卫生间隔板被索赔)
 1. [欧盟“反补贴”瞄准中国风力涡轮机](https://so.toutiao.com/search?keyword=欧盟“反补贴”瞄准中国风力涡轮机)
 1. [男子骑超标电动车被查后当众砸车](https://so.toutiao.com/search?keyword=男子骑超标电动车被查后当众砸车)
 1. [保安队长性侵女队员背后的临时工之困](https://so.toutiao.com/search?keyword=保安队长性侵女队员背后的临时工之困)
@@ -81,7 +98,6 @@
 1. [村民自费装路灯被拆除？当地：没拆 鼓励](https://so.toutiao.com/search?keyword=村民自费装路灯被拆除？当地：没拆+鼓励)
 1. [赖岳谦谈中国大陆宣布制裁两家美企](https://so.toutiao.com/search?keyword=赖岳谦谈中国大陆宣布制裁两家美企)
 1. [王健林失去万达广场后还剩什么](https://so.toutiao.com/search?keyword=王健林失去万达广场后还剩什么)
-1. [南京北站造型被吐槽像卫生巾](https://so.toutiao.com/search?keyword=南京北站造型被吐槽像卫生巾)
 1. [首饰金价一夜飙升15元每克](https://so.toutiao.com/search?keyword=首饰金价一夜飙升15元每克)
 1. [曝以军“灭门行动”未请示总理](https://so.toutiao.com/search?keyword=曝以军“灭门行动”未请示总理)
 1. [伊朗媒体：要把特拉维夫夷为平地](https://so.toutiao.com/search?keyword=伊朗媒体：要把特拉维夫夷为平地)
